<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/title_hint"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/address_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/address_hint"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/nr_of_rooms_text"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/room_nr_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/nr_of_rooms_hint"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center"
        >


        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_edited_apartment"
            android:textAlignment="center"
            android:onClick="onClickSaveApButton"
            />


    </LinearLayout>
</LinearLayout>